manifests/backend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-stable-service
  namespace: default
  labels:
    app: backend
    component: service
    type: stable
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: backend-canary-service
  namespace: default
  labels:
    app: backend
    component: service
    type: canary
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
  labels:
    app: backend
    component: service
    type: main
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP
